# os

./: CMakeLists.txt  ex.c  fin_os_projec.docx  jim_ex.c  os_prjct.docx  p3220120-p3220150-p3220227-pizza.c  p3220120-p3220150-p3220227-pizza.h  param.h  pdf_file.c  test-res.sh
